--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,20 @@ SET(SRC
 ADD_EXECUTABLE(costVolumeFilter ${SRC})
 TARGET_LINK_LIBRARIES(costVolumeFilter ${PNG_LIBRARIES})
 
+FIND_PACKAGE(OpenMP)
+IF(OPENMP_FOUND)
+    SET_TARGET_PROPERTIES(costVolumeFilter PROPERTIES
+                          COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
+ENDIF(OPENMP_FOUND)
+
+IF(UNIX)
+    SET_TARGET_PROPERTIES(costVolumeFilter PROPERTIES
+                          COMPILE_FLAGS "-Wall -Wextra -Werror ${OpenMP_CXX_FLAGS}")
+    IF(OPENMP_FOUND)
+        SET(CMAKE_EXE_LINKER_FLAGS  ${OpenMP_CXX_FLAGS})
+    ENDIF(OPENMP_FOUND)
+ENDIF(UNIX)
+
 SET(CPACK_PACKAGE_FILE_NAME "CostVolumeFilter")
 SET(CPACK_GENERATOR "TGZ")
 INCLUDE(CPack)
