General clean up and fix bug when incorrect input image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,18 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 FIND_PACKAGE(PNG)
 
+SET(SRC_C
+    io_png.c io_png.h)
+
 SET(SRC
     cmdLine.h
     costVolume.cpp costVolume.h
     filters.cpp
     image.cpp image.h
-    io_png.c io_png.h
     main.cpp
     occlusion.cpp occlusion.h)
 
-ADD_EXECUTABLE(costVolumeFilter ${SRC})
+ADD_EXECUTABLE(costVolumeFilter ${SRC} ${SRC_C})
 TARGET_LINK_LIBRARIES(costVolumeFilter ${PNG_LIBRARIES})
 
 FIND_PACKAGE(OpenMP)
@@ -21,10 +23,12 @@ IF(OPENMP_FOUND)
 ENDIF(OPENMP_FOUND)
 
 IF(UNIX)
-    SET_TARGET_PROPERTIES(costVolumeFilter PROPERTIES
-                          COMPILE_FLAGS "-Wall -Wextra -Werror ${OpenMP_CXX_FLAGS}")
+    SET_SOURCE_FILES_PROPERTIES(${SRC} PROPERTIES
+                                COMPILE_FLAGS "-Wall -Wextra -Werror -std=c++98 ${OpenMP_CXX_FLAGS}")
+    SET_SOURCE_FILES_PROPERTIES(${SRC_C} PROPERTIES
+                                COMPILE_FLAGS "-Wall -Wextra -Werror -std=c89")
     IF(OPENMP_FOUND)
-        SET(CMAKE_EXE_LINKER_FLAGS  ${OpenMP_CXX_FLAGS})
+        SET(CMAKE_EXE_LINKER_FLAGS ${OpenMP_CXX_FLAGS})
     ENDIF(OPENMP_FOUND)
 ENDIF(UNIX)
 
@@ -38,7 +42,7 @@ SET(DATA
 SET(CPACK_PACKAGE_FILE_NAME "CostVolumeFilter")
 SET(CPACK_GENERATOR "TGZ")
 INCLUDE(CPack)
-INSTALL(FILES CMakeLists.txt ${SRC} README.txt license.txt
+INSTALL(FILES CMakeLists.txt ${SRC} ${SRC_C} README.txt license.txt
         DESTINATION .)
 INSTALL(FILES ${DATA}
         DESTINATION ./data)
