Change exe name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ SET(SRC
     main.cpp
     occlusion.cpp occlusion.h)
 
-ADD_EXECUTABLE(costVolumeFilter ${SRC} ${SRC_C})
-TARGET_LINK_LIBRARIES(costVolumeFilter ${PNG_LIBRARIES})
+ADD_EXECUTABLE(stereoGuidedFilter ${SRC} ${SRC_C})
+TARGET_LINK_LIBRARIES(stereoGuidedFilter ${PNG_LIBRARIES})
 
 ADD_EXECUTABLE(show_weights
   cmdLine.h filters.cpp image.cpp image.h main_weights.cpp ${SRC_C})
@@ -32,7 +32,7 @@ TARGET_LINK_LIBRARIES(show_weights ${PNG_LIBRARIES})
 
 FIND_PACKAGE(OpenMP)
 IF(OPENMP_FOUND)
-    SET_TARGET_PROPERTIES(costVolumeFilter PROPERTIES
+    SET_TARGET_PROPERTIES(stereoGuidedFilter PROPERTIES
                           COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
 ENDIF(OPENMP_FOUND)
 
@@ -45,18 +45,3 @@ IF(UNIX)
         SET(CMAKE_EXE_LINKER_FLAGS ${OpenMP_CXX_FLAGS})
     ENDIF(OPENMP_FOUND)
 ENDIF(UNIX)
-
-SET(DATA
-    data/tsukuba0.png data/tsukuba1.png
-    data/disparity.png
-    data/disparity_occlusion.png
-    data/disparity_occlusion_filled.png
-    data/disparity_occlusion_filled_smoothed.png)
-
-SET(CPACK_PACKAGE_FILE_NAME "CostVolumeFilter-1.0")
-SET(CPACK_GENERATOR "TGZ")
-INCLUDE(CPack)
-INSTALL(FILES CMakeLists.txt ${SRC} ${SRC_C} README.txt license.txt
-        DESTINATION .)
-INSTALL(FILES ${DATA}
-        DESTINATION ./data)
