--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,6 @@ IF(UNIX)
         SET(CMAKE_EXE_LINKER_FLAGS ${OpenMP_CXX_FLAGS})
     ENDIF(OPENMP_FOUND)
 ENDIF(UNIX)
+IF(MSVC)
+    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS)
+ENDIF(MSVC)
