Fix CMake warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 2.8)
+project(stereoGuidedFilter)
 
-#find_package(PNG)
+find_package(PNG)
 
 if(NOT PNG_FOUND)
     find_package(ZLIB)
